Fixed main menu positioning issue on small screens.

--- a/website/src/style/theme.scss
+++ b/website/src/style/theme.scss
@@ -18,7 +18,7 @@ $themes: (
 		neutral-900: #afafaf,
 		primary-500: #ea6645,
 		accent-500: #45afea,
-		accented-text: #fff,
+		accented-text: rgba(255, 255, 255, 0.8),
 		accented-bg: #bb5237,
 		bold-text: #d2d2d2,
 		t-neutral-100: rgba(255,255,255,0.05)
